<resources>
    <string name="app_name">MyOwnRecipe</string>

    <string name="hyphen">-</string>
    <string name="zero_dotted_zero">0.0</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="app_title">My Recipe</string>

    <string name="edit_upper">EDIT</string>
    <string name="save_upper">SAVE</string>

    <string name="new_food">New Food</string>

    <string name="new_recipe">New Recipe</string>
    <string name="food">Food</string>
    <string name="hint_input_recipe_name">레시피 이름을 입력해 주세요.</string>
    <string name="ingredients">재료</string>
    <string name="recipe_steps">조리순서</string>
    <string name="review">후기</string>
    <string name="hint_input_text">직접입력</string>
</resources>