<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.RecipeDetailFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_top_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:padding="8dp"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/ib_back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_back_ios_24"
            app:tint="@color/gray_500"
            app:layout_constraintHeight_max="24dp"
            android:backgroundTint="@android:color/transparent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

        <TextView
            android:id="@+id/tv_food_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/gray_700"
            android:textAlignment="center"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <TextView
            android:id="@+id/tv_edit_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_upper"
            android:textColor="@color/gray_500"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:id="@+id/sv_recipe_scroll_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/cl_top_bar"
        app:layout_constraintBottom_toBottomOf="parent"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_recipe_detail_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:padding="8dp"
            app:layout_constraintTop_toBottomOf="@id/cl_top_bar"
            app:layout_constraintBottom_toBottomOf="parent"
            >
            <ImageView
                android:id="@+id/iv_food_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/placeholder_image"
                app:layout_constraintTop_toTopOf="parent"
                />

            <ImageView
                android:id="@+id/iv_bookmark"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:background="@drawable/ic_bookmark_border_24"
                android:backgroundTint="@color/gray_300"
                android:layout_margin="10dp"
                app:layout_constraintWidth_max="24dp"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintTop_toTopOf="@id/iv_food_image"
                app:layout_constraintEnd_toEndOf="@id/iv_food_image"
                />

            <LinearLayout
                android:id="@+id/ll_rating_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@id/iv_food_image"
                app:layout_constraintEnd_toEndOf="parent"
                >

                <TextView
                    android:id="@+id/tv_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="16dp"
                    android:text="@string/hyphen"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:textColor="@color/gray_700"
                    android:textAlignment="center"
                    />

                <ImageView
                    android:id="@+id/iv_star"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_star_fill_16"
                    app:tint="@color/gray_700"
                    android:layout_marginStart="2dp"
                    />

            </LinearLayout>

            <TextView
                android:id="@+id/tv_recipe_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAppearance="?attr/textAppearanceHeadline6"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintTop_toBottomOf="@id/iv_food_image"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/ll_rating_layout"
                />

            <TextView
                android:id="@+id/tv_ingredients_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/ingredients"
                android:textAppearance="?attr/textAppearanceBody2"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@id/tv_recipe_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

            <TextView
                android:id="@+id/tv_ingredients"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAppearance="?attr/textAppearanceBody2"
                android:minLines="4"
                android:layout_marginTop="4dp"
                app:layout_constraintTop_toBottomOf="@id/tv_ingredients_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

            <TextView
                android:id="@+id/tv_recipe_steps_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/recipe_steps"
                android:textAppearance="?attr/textAppearanceBody2"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@id/tv_ingredients"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

            <TextView
                android:id="@+id/tv_recipe_steps"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAppearance="?attr/textAppearanceBody2"
                android:minLines="8"
                android:layout_marginTop="4dp"
                app:layout_constraintTop_toBottomOf="@id/tv_recipe_steps_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

            <TextView
                android:id="@+id/tv_recipe_review_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/review"
                android:textAppearance="?attr/textAppearanceBody2"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@id/tv_recipe_steps"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

            <TextView
                android:id="@+id/tv_recipe_review"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAppearance="?attr/textAppearanceBody2"
                android:minLines="4"
                android:layout_marginTop="4dp"
                app:layout_constraintTop_toBottomOf="@id/tv_recipe_review_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>